fix dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,7 +22,7 @@
     --card-foreground: hsl(222.2, 47.4%, 11.2%);
 
     --primary: hsl(45, 93%, 63%);
-    --primary-foreground: hsl(219, 43, 39);
+    --primary-foreground: hsl(222.2, 47.4%, 11.2%);
 
     --primary-lighter: hsl(44, 91%, 87%);
     --primary-lighter-foreground: hsl(222.2, 47.4%, 11.2%);
@@ -31,7 +31,7 @@
     --secondary-foreground: hsl(0, 0%, 100%);
 
     --secondary-lighter: hsl(207, 60%, 83%);
-    --secondary-lighter-foreground: hsl(219, 43%, 39%);
+    --secondary-lighter-foreground: hsl(222.2, 47.4%, 11.2%);
 
     --accent: hsl(210, 40%, 96.1%);
     --accent-foreground: hsl(222.2, 47.4%, 11.2%);
@@ -63,11 +63,17 @@
     --card: hsl(224, 71%, 4%);
     --card-foreground: hsl(213, 31%, 91%);
 
-    --primary: hsl(210, 40%, 98%);
-    --primary-foreground: hsl(222.2, 47.4%, 1.2%);
+    --primary: hsl(45, 93%, 63%);
+    --primary-foreground: hsl(222.2, 47.4%, 11.2%);
 
-    --secondary: hsl(222.2, 47.4%, 11.2%);
-    --secondary-foreground: hsl(210, 40%, 98%);
+    --primary-lighter: hsl(0, 0%, 31%);
+    --primary-lighter-foreground:  hsl(210, 40%, 98%);
+
+    --secondary: hsl(0, 0%, 31%);
+    --secondary-foreground:  hsl(210, 40%, 98%);
+
+    --secondary-lighter: hsl(0, 0%, 31%);
+    --secondary-lighter-foreground: hsl(210, 40%, 98%);
 
     --destructive: hsl(0, 63%, 31%);
     --destructive-foreground: hsl(210, 40%, 98%);
